--- a/ai_agent/Dockerfile
+++ b/ai_agent/Dockerfile
@@ -1,16 +1,36 @@
+# FROM python:3.11-slim
+
+# WORKDIR /app
+
+# # Install system dependencies for transformers & torch (minimal)
+# RUN apt-get update && apt-get install -y git curl && rm -rf /var/lib/apt/lists/*
+
+# COPY requirements.txt .
+
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# COPY main.py .
+
+# ENV PYTHONUNBUFFERED=1
+
+# EXPOSE 8080
+
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+
 FROM python:3.11-slim
 
+# System deps
+RUN apt-get update && apt-get install -y git
+
+# Create app directory
 WORKDIR /app
 
-# Install dependencies
+# Copy files
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
 COPY . .
 
-# Expose the API port
-EXPOSE 8080
+EXPOSE 8501
 
-# Command to run the API
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
